--- a/sites/twotone/scss/elements/_page.scss
+++ b/sites/twotone/scss/elements/_page.scss
@@ -27,18 +27,11 @@
 	}
 }
 
-.grid__item--image,
-.grid__item--caption {
-	
-	@include bp(bp5) {
-		grid-column: span 6;
-	}
-}
-
 .grid__item--image {
 	margin-bottom: $vertical-spacing;
 	
 	@include bp(bp5) {
+		grid-column: 1/7;
 		margin-bottom: 0;
 		
 		img {
@@ -55,29 +48,9 @@
 	.btn {
 		margin-bottom: 0;
 	}
-}
-
-.grid__item--flipped {
-
+	
 	@include bp(bp5) {
-		direction: rtl;
-		
-		.grid__item--image,
-		.grid__item--caption {
-			direction: ltr;
-		}
-		
-		.grid__item--caption-title {
-			left: auto;
-			right: -25%;
-			text-align: right;
-			
-			&:before {
-				clip-path: inset(0% 0% 0% calc(75% + #{$vertical-spacing});
-				justify-content: flex-end;
-				text-align: right;
-			}
-		}
+		grid-column: 7/13;
 	}
 }
 
@@ -105,5 +78,63 @@
 	
 	@include bp(bp6) {
 		@include font-size(84);
+	}
+}
+
+
+.grid__item--flipped {
+
+	@include bp(bp5) {
+		direction: rtl;
+		
+		.grid__item--image,
+		.grid__item--caption {
+			direction: ltr;
+		}
+		
+		// .grid__item--image {
+		// 	grid-column: 7/13;			
+		// }
+		// 
+		// .grid__item--caption {
+		// 	grid-column: 1/7;
+		// }
+		
+		.grid__item--caption-title {
+			left: auto;
+			right: -25%;
+			text-align: right;
+			
+			&:before {
+				clip-path: inset(0% 0% 0% calc(75% + #{$vertical-spacing}));
+				justify-content: flex-end;
+				text-align: right;
+			}
+		}
+	}
+}
+
+.stotty {
+	
+	.grid__item {
+		grid-column-gap: 0;
+	}
+	
+	.grid__item--image {
+		grid-column: 1 / span 6;
+		grid-row: 1;
+	}
+	
+	.grid__item--caption {
+		grid-column: 6 / span 6;
+		grid-row: 1;
+	}
+	
+	.grid__item--caption-title {
+		left: 0 !important;
+		
+		&:before {
+			clip-path: inset(0% calc((5 / 6) * 100%) 0% 0%);
+		}
 	}
 }
