--- a/sites/twotone/css/main.css
+++ b/sites/twotone/css/main.css
@@ -817,21 +817,42 @@ p {
   }
 }
 
-.stotty .grid__item {
-  grid-column-gap: 0;
-}
-.stotty .grid__item--image {
-  grid-column: 1/span 6;
-  grid-row: 1;
-}
-.stotty .grid__item--caption {
-  grid-column: 6/span 6;
-  grid-row: 1;
-}
-.stotty .grid__item--caption-title {
-  left: 0 !important;
-}
-.stotty .grid__item--caption-title:before {
-  -webkit-clip-path: inset(0% calc((5 / 6) * 100%) 0% 0%);
-          clip-path: inset(0% calc((5 / 6) * 100%) 0% 0%);
+/* [1] */
+/* [2] */
+/* [3] */
+/* [4] */
+/* [5] */
+/* [6] */
+@media (min-width : 64em) {
+  .stotty .grid__item {
+    grid-column-gap: 24px;
+  }
+  .stotty .grid__item--image {
+    grid-column: 1/span 6;
+    grid-row: 1;
+  }
+  .stotty .grid__item--caption {
+    grid-column: 6/span 6;
+    grid-row: 1;
+  }
+  .stotty .grid__item--caption-title {
+    left: 0 !important;
+  }
+  .stotty .grid__item--caption-title:before {
+    -webkit-clip-path: inset(0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)) 0% 0%);
+            clip-path: inset(0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)) 0% 0%);
+  }
+  .stotty p,
+.stotty .btn {
+    margin-left: calc(((1 / 6) * 100%) + ((1 / 6) * 24px));
+    width: 100%;
+  }
+  .stotty .grid__item--flipped .grid__item--caption-title:before {
+    -webkit-clip-path: inset(0% 0% 0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)));
+            clip-path: inset(0% 0% 0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)));
+  }
+  .stotty .grid__item--flipped p,
+.stotty .grid__item--flipped .btn {
+    margin-left: calc(((-1 / 6) * 100%) + ((-1 / 6) * 24px));
+  }
 }
