--- a/sites/twotone/scss/elements/_page.scss
+++ b/sites/twotone/scss/elements/_page.scss
@@ -114,27 +114,54 @@
 	}
 }
 
-.stotty {
-	
-	.grid__item {
-		grid-column-gap: 0;
-	}
-	
-	.grid__item--image {
-		grid-column: 1 / span 6;
-		grid-row: 1;
-	}
-	
-	.grid__item--caption {
-		grid-column: 6 / span 6;
-		grid-row: 1;
-	}
-	
-	.grid__item--caption-title {
-		left: 0 !important;
+@include bp(bp5) {
+
+	.stotty {
 		
-		&:before {
-			clip-path: inset(0% calc((5 / 6) * 100%) 0% 0%);
+		.grid__item {
+			//grid-column-gap: 0;
+			grid-column-gap: $vertical-spacing;
+		}
+		
+		.grid__item--image {
+			grid-column: 1 / span 6;
+			grid-row: 1;
+		}
+		
+		.grid__item--caption {
+			grid-column: 6 / span 6;
+			grid-row: 1;
+		}
+		
+		.grid__item--caption-title {
+			left: 0 !important;
+			
+			&:before {
+				//clip-path: inset(0% calc((5 / 6) * 100%) 0% 0%);
+				clip-path: inset(0% calc(((5 / 6) * 100%) + ((5 / 6) * #{$vertical-spacing})) 0% 0%);
+			}
+		}
+		
+		p,
+		.btn {
+			margin-left: calc(((1 / 6) * 100%) + ((1 / 6) * #{$vertical-spacing}));
+			width: 100%;
+		}
+		
+		.grid__item--flipped {
+				
+			.grid__item--caption-title {
+					
+				&:before {
+					//clip-path: inset(0% 0% 0% calc((5 / 6) * 100%));
+					clip-path: inset(0% 0% 0% calc(((5 / 6) * 100%) + ((5 / 6) * #{$vertical-spacing})));
+				}
+			}
+			
+			p,
+			.btn {
+				margin-left: calc(((-1 / 6) * 100%) + ((-1 / 6) * #{$vertical-spacing}));
+			}
 		}
 	}
 }
