--- a/sites/twotone/css/main.css
+++ b/sites/twotone/css/main.css
@@ -817,6 +817,9 @@ p {
   }
 }
 
+/* ==========================================================================
+#STOTTY - BLOCK OVER IMAGE, P/BTN THEN INDENTED
+========================================================================== */
 /* [1] */
 /* [2] */
 /* [3] */
@@ -854,5 +857,41 @@ p {
   .stotty .grid__item--flipped p,
 .stotty .grid__item--flipped .btn {
     margin-left: calc(((-1 / 6) * 100%) + ((-1 / 6) * 24px));
+  }
+}
+/* ==========================================================================
+#MOY - BLOCK IN GRID, TITLE INDENTED
+========================================================================== */
+/* [1] */
+/* [2] */
+/* [3] */
+/* [4] */
+/* [5] */
+/* [6] */
+@media (min-width : 64em) {
+  .moy .grid__item {
+    grid-column-gap: 24px;
+  }
+  .moy .grid__item--image {
+    grid-column: 1/span 6;
+    grid-row: 1;
+  }
+  .moy .grid__item--caption {
+    grid-column: 7/span 6;
+    grid-row: 1;
+  }
+  .moy .grid__item--caption-title {
+    left: calc(((-1 / 6) * 100%) + ((-1 / 6) * 24px));
+  }
+  .moy .grid__item--caption-title:before {
+    -webkit-clip-path: inset(0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)) 0% 0%);
+            clip-path: inset(0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)) 0% 0%);
+  }
+  .moy .grid__item--flipped .grid__item--caption-title {
+    left: calc(((1 / 6) * 100%) + ((1 / 6) * 24px));
+  }
+  .moy .grid__item--flipped .grid__item--caption-title:before {
+    -webkit-clip-path: inset(0% 0% 0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)));
+            clip-path: inset(0% 0% 0% calc(((5 / 6) * 100%) + ((5 / 6) * 24px)));
   }
 }
