Added tres PDP example code

--- a/sites/tres/scss/_main.scss
+++ b/sites/tres/scss/_main.scss
@@ -27,6 +27,9 @@
 'elements/a',
 'elements/form-button',
 'elements/hr',
+'elements/img',
 'elements/site',
 'elements/type-heading',
-'elements/page'
+'elements/type-paragraph',
+'elements/page',
+'elements/pdp'
