--- a/sites/tres/scss/elements/_page.scss
+++ b/sites/tres/scss/elements/_page.scss
@@ -22,3 +22,117 @@
 .align-right {
 	float: right;
 }
+
+
+
+
+
+/* ==========================================================================
+#GRID
+========================================================================== */
+
+.grid {
+   padding: $vertical-spacing $vertical-spacing 0;
+}
+
+.grid__item {
+   display: grid;
+   grid-column-gap: $vertical-spacing;
+   margin-bottom: $vertical-spacing;
+   width: 100%;
+   
+   @include bp(bp5) {
+      align-items: center;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: $vertical-spacing;
+      margin-top: 0;
+   }
+   
+   + .grid__item {
+      margin-top: $vertical-spacing*2;
+      
+      @include bp(bp5) {
+         margin-top: 0;
+      }
+   }
+}
+
+.grid__item--image {
+   margin-bottom: $vertical-spacing;
+   
+   @include bp(bp5) {
+      grid-column: 1 / span 6;
+      grid-row: 1;
+      margin-bottom: 0;
+      
+      img {
+         background-position: fixed;
+         height: calc(100vh - #{$vertical-spacing*2});
+         object-fit: cover;
+         object-position: center;
+      }
+   }
+}
+
+.grid__item--caption {
+
+   .btn {
+      margin-bottom: 0;
+   }
+   
+   @include bp(bp5) {
+      grid-column: 7 / span 6;
+      grid-row: 1;
+   }
+}
+
+/* Title */
+
+.grid__item--caption-title {
+   @include font-size(60);
+   
+   @include bp(bp5) {
+      @include font-size(72);
+      position: relative;
+      left: calc(((-1 / 6) * 100%) + ((-1 / 6) * #{$vertical-spacing}));
+      
+      &:before {
+         clip-path: inset(0% calc(((5 / 6) * 100%) + ((5 / 6) * #{$vertical-spacing})) 0% 0%);
+         color: $white;
+         content: attr(data-title);
+         display: flex;
+         overflow: hidden;
+         position: absolute;
+         text-align: left;
+         width: 100%;
+      }
+   }
+
+   @include bp(bp6) {
+      @include font-size(84);
+   }
+}
+
+
+.grid__item--flipped {
+
+   @include bp(bp5) {
+      direction: rtl;
+      
+      .grid__item--image,
+      .grid__item--caption {
+         direction: ltr;
+      }
+      
+      .grid__item--caption-title {
+         left: calc(((1 / 6) * 100%) + ((1 / 6) * #{$vertical-spacing}));
+         text-align: right;
+         
+         &:before {
+            clip-path: inset(0% 0% 0% calc(((5 / 6) * 100%) + ((5 / 6) * #{$vertical-spacing})));
+            justify-content: flex-end;
+            text-align: right;
+         }
+      }
+   }
+}
